2007-08-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-python-desktop,
	yelp, bug-buddy, gok and alacarte.

2007-08-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-applets.

2007-08-13  Daniel Elstner  <danielk@openismus.com>

	* modulesets/gnome-suites-2.20.modules (gtkmm): Switch to
	gtkmm-2-12 branch.

2007-08-13  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.20.modules:
	glibmm: Use the new glibmm-2-14 branch instead of trunk.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated download and installation instructions.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: completed list of supported revision control
	systems.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* README: fixed instruction about building JhBuild.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* AUTHORS, Makefile.am, autogen.sh, configure.ac, doc/Makefile.am,
	doc/C/jhbuild.xml, doc/jhbuild.omf.in, doc/jhbuild.xml: added minimal
	autotools infrastucture and moved documentation to use gnome-doc-utils.

2007-08-11  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome-external-deps-2.20.modules: Update
	icon-naming-utils to 0.8.2 required by tango icons.

2007-08-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.20.modules: bumped shared-mime-info
	to 0.22, as mentioned in ExternalDependencies and needed by totem.

2007-08-08  Mark McLoughlin  <markmc@redhat.com>

	* jhbuild/versioncontrol/hg.py: change previous patch
	to use single quotes like the rest of the code
	
2007-08-08  Mark McLoughlin  <markmc@redhat.com>

	* jhbuild/versioncontrol/hg.py: explicitly support
	ssh:// URIs since urlparse.urljoin() doesn't. See
	bug #464641
	
2007-08-03  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules:
	* modulesets/gnome-suites-2.20.modules: move rarian to
	gnome-external-deps-2.20.modules
