@@ -1,5 +1,10 @@
 2007-08-13  Frederic Peters  <fpeters@0d.be>
 
+	* autogen.sh, configure.ac: added more notes about autotools being used
+	just for the documentation.
+
+2007-08-13  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-2.18.modules: branched gnome-python-desktop,
 	yelp, bug-buddy, gok and alacarte.
 
